Refactor Email. Give up on exceptions.